--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://www.codingnepalweb.com">Piyush Kumar</a></span>
+        <span>Created By <a href="https://www.linkedin.com/in/piyush-kumar-28ba351ba/">Piyush Kumar</a></span>
     </footer>
 
     <script src="script.js"></script>
